fix: resolve CONCERNS.md issues - hardcoded secrets, CORS, healthcheck, Swagger, search validation, account lockout